--- a/blog/templates/shop/product_list.html
+++ b/blog/templates/shop/product_list.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Все товары</title>
-    </head>
-    <body>
-        <h1>Все товары</h1>
+{% extends "base.html" %}
+{% block page_title %}Все товары{% endblock page_title %}
 
-        {% if products %}
+{% block page_content %}
+    <h1>Все товары</h1>
+
+    {% if products %}
         {% for product in products %}
             <div class="products-container" style="border: 1px solid black; margin-bottom: 10px; padding: 15px;">
             <h2>Название продукта: <a href="{% url 'product_detail' product_id=product.id %}">{{ product.name }}</a></h2>
@@ -17,8 +13,7 @@
             <small>Дата публикации: {{ product.created_at }}</small>
             </div>
         {% endfor %}
-        {% else %}
+    {% else %}
         <p>Продуктов ещё нет. Загляните позже!</p>
-        {% endif %}
-    </body>
-</html>
+    {% endif %}
+{% endblock page_content %}
