feat(nav): Добавила навигационное меню

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,12 @@
         <link rel="stylesheet" href="{% static 'css/core.css' %}">
     </head>
     <body>
-        <header>Общая шапка для сайта</header>
+        <header>
+            <nav>
+                <a href="{% url "product_list" %}">Все товары</a>
+                <a href="{% url "new_product" %}">Продать товар</a>
+            </nav>
+        </header>
         <main>{% block page_content %}{% endblock page_content %}</main>
         <footer>&copy; Все права защищены 2025</footer>
     </body>
