--- a/blog/templates/shop/product_detail.html
+++ b/blog/templates/shop/product_detail.html
@@ -9,5 +9,5 @@
     <h3>{{ product.name }}</h3>
     <p>{{ product.description }}</p>
     <p>{{ product.price }}</p>
-    <p>{{ product.created_at }}</p>
+    <p>{{ product.created_at|date:"d.m.Y H:i" }}</p>
 {% endblock page_content %}
