--- a/blog/templates/shop/product_add.html
+++ b/blog/templates/shop/product_add.html
@@ -10,17 +10,37 @@
 
         <div>
             <label for="nameInput">Название товара:</label>
-            <input id="nameInput" name="name" type="text" placeholder="Название (максимальная длина 150 символов)" required>
+            <input 
+                id="nameInput" 
+                name="name" 
+                type="text" 
+                value="{{ name|default:'' }}"
+                placeholder="Название (максимальная длина 150 символов)"
+            >
+            {% if errors.name %}
+                <div style='color: red;'>{{ errors.name }} </div>
+            {% endif %}
         </div>
 
         <div>
             <label for="descriptionInput">Описание:</label>
-            <textarea id="descriptionInput" name="description" rows="3"></textarea>
+            <textarea id="descriptionInput" name="description" rows="3">{{ description|default:'' }}</textarea>
+            {% if errors.description %}
+                <div style="color: red;">{{ errors.description }}</div>
+            {% endif %}
         </div>
 
         <div>
             <label for="priceInput">Цена:</label>
-            <input id="priceInput" name="price" type="number" required>
+            <input 
+            id="priceInput" 
+            name="price" 
+            type="number"
+            value="{{ price|default:'' }}"
+            >
+            {% if errors.price %}
+                <div style="color: red;">{{ errors.price }}</div>
+            {% endif %}
         </div>
 
         <button type="submit">Создать</button>
