--- a/blog/templates/shop/product_add.html
+++ b/blog/templates/shop/product_add.html
@@ -8,7 +8,13 @@
     <form method="POST">
         {% csrf_token %}
 
-        {{ form.as_div }}
+    {% for field in form %}
+        <div>
+            {{ field.label_tag }}
+            {{ field }}
+            {{ field.errors }}
+        </div>
+    {% endfor %}
 
         <button type="submit">Создать</button>
     </form>
