--- a/blog/templates/shop/product_detail.html
+++ b/blog/templates/shop/product_detail.html
@@ -10,4 +10,6 @@
     <p>{{ product.description }}</p>
     <p>{{ product.price }}</p>
     <p>{{ product.created_at|date:"d.m.Y H:i" }}</p>
+
+    <a href="{% url 'edit_product' product.id %}">Редактировать объявление</a>
 {% endblock page_content %}
