feat(delete-product): Добавила шаблон для подтверждения удаления объявления

--- a/blog/templates/shop/product_detail.html
+++ b/blog/templates/shop/product_detail.html
@@ -13,9 +13,5 @@
 
     <a href="{% url 'edit_product' product.id %}">Редактировать объявление</a>
 
-    <form method="POST" action="{% url 'remove_product' product.id %}">
-        {% csrf_token %}
-
-        <button type="submit">Удалить объявление</button>
-    </form>
+    <a href="{% url 'remove_product' product.id %}">Удалить объявление</a>
 {% endblock page_content %}
