--- a/blog/templates/shop/product_list.html
+++ b/blog/templates/shop/product_list.html
@@ -7,13 +7,13 @@
     {% if products %}
         {% for product in products %}
             <div class="products-container" style="border: 1px solid black; margin-bottom: 10px; padding: 15px;">
-            <h2>Название продукта: <a href="{% url 'product_detail' product_id=product.id %}">{{ product.name }}</a></h2>
-            <p>Описание продукта: {{ product.description }}</p>
-            <h3>Цена продукта: {{ product.price }}</h3>
+            <h2>Название товара: <a href="{% url 'product_detail' product_id=product.id %}">{{ product.name }}</a></h2>
+            <p>Описание товара: {{ product.description }}</p>
+            <h3>Цена товара: {{ product.price }}</h3>
             <small>Дата публикации: {{ product.created_at }}</small>
             </div>
         {% endfor %}
     {% else %}
-        <p>Продуктов ещё нет. Загляните позже!</p>
+        <p>Товаров ещё нет. Загляните позже!</p>
     {% endif %}
 {% endblock page_content %}
