--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,24 @@
     </head>
     <body>
         <header>
-            <nav>
-                <a href="{% url "product_list" %}">Все товары</a>
-                <a href="{% url "new_product" %}">Продать товар</a>
+            <nav class="navbar navbar-expand-sm bg-dark" data-bs-theme="dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">WingsOfFreedom</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="{% url 'product_list' %}">Список объявлений</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="{% url 'new_product' %}">Создать объявление</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
         <main>{% block page_content %}{% endblock page_content %}</main>
