--- a/templates/base.html
+++ b/templates/base.html
@@ -23,12 +23,17 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav me-auto">
                             <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{% url 'product_list' %}">Список объявлений</a>
                             </li>
                             <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{% url 'new_product' %}">Создать объявление</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'register' %}">Регистрация</a>
                             </li>
                         </ul>
                     </div>
