--- a/blog/templates/shop/product_detail.html
+++ b/blog/templates/shop/product_detail.html
@@ -2,7 +2,7 @@
 {% block page_title %}{{ product.name }}{% endblock page_title %}
 
 {% block page_content %}
-    <a href="{% url 'product_list' %}">&larr;Назад</a>
+    <a href="{% url 'blog:product_list' %}">&larr;Назад</a>
 
     <h1>Детали товара:</h1>
     <h2>ID товара: {{ product.id }}</h2>
@@ -11,7 +11,7 @@
     <p>{{ product.price }}</p>
     <p>{{ product.created_at|date:"d.m.Y H:i" }}</p>
 
-    <a href="{% url 'edit_product' product.id %}">Редактировать объявление</a>
+    <a href="{% url 'blog:edit_product' product.id %}">Редактировать объявление</a>
 
-    <a href="{% url 'remove_product' product.id %}">Удалить объявление</a>
+    <a href="{% url 'blog:remove_product' product.id %}">Удалить объявление</a>
 {% endblock page_content %}
