--- a/blog/templates/shop/product_list.html
+++ b/blog/templates/shop/product_list.html
@@ -7,7 +7,7 @@
     {% if products %}
         {% for product in products %}
             <div class="products-container" style="border: 1px solid black; margin-bottom: 10px; padding: 15px;">
-            <h2>Название товара: <a href="{% url 'product_detail' product_id=product.id %}">{{ product.name }}</a></h2>
+            <h2>Название товара: <a href="{% url 'blog:product_detail' product_id=product.id %}">{{ product.name }}</a></h2>
             <p>Описание товара: {{ product.description }}</p>
             <h3>Цена товара: {{ product.price }}</h3>
             <small>Дата публикации: {{ product.created_at }}</small>
