--- a/templates/base.html
+++ b/templates/base.html
@@ -25,15 +25,15 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'product_list' %}">Список объявлений</a>
+                            <a class="nav-link" aria-current="page" href="{% url 'blog:product_list' %}">Список объявлений</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'new_product' %}">Создать объявление</a>
+                            <a class="nav-link" aria-current="page" href="{% url 'blog:new_product' %}">Создать объявление</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="{% url 'register' %}">Регистрация</a>
+                                <a class="nav-link" aria-current="page" href="{% url 'users:register' %}">Регистрация</a>
                             </li>
                         </ul>
                     </div>
