--- a/templates/base.html
+++ b/templates/base.html
@@ -32,9 +32,18 @@
                             </li>
                         </ul>
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="{% url 'users:register' %}">Регистрация</a>
-                            </li>
+                            {% if request.user.is_authenticated %}
+                                <li class="nav-item">
+                                    <a class="nav-link disabled" href="#">Sasageyo, {{ request.user }}!</a>
+                                </li>
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="{% url 'users:login' %}">Войти</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="{% url 'users:register' %}">Регистрация</a>
+                                </li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
