--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link disabled" href="#">Sasageyo, {{ request.user }}!</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="{% url 'users:logout' %}">Выйти из аккаута</a>
+                                </li>
                             {% else %}
                                 <li class="nav-item">
                                     <a class="nav-link" aria-current="page" href="{% url 'users:login' %}">Войти</a>
