--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <header>
             <nav class="navbar navbar-expand-sm bg-dark" data-bs-theme="dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">WingsOfFreedom</a>
+                    <a class="navbar-brand" href="{% url 'blog:main_page' %}">WingsOfFreedom</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
