--- a/blog/templates/shop/product_detail.html
+++ b/blog/templates/shop/product_detail.html
@@ -11,6 +11,8 @@
     <p>{{ product.price }}</p>
     <p>{{ product.created_at|date:"d.m.Y H:i" }}</p>
 
+    <p>Продавец: {{ product.seller }}</p
+
     <a href="{% url 'blog:edit_product' product.id %}">Редактировать объявление</a>
 
     <a href="{% url 'blog:remove_product' product.id %}">Удалить объявление</a>
