--- a/blog/templates/shop/product_detail.html
+++ b/blog/templates/shop/product_detail.html
@@ -11,9 +11,11 @@
     <p>{{ product.price }}</p>
     <p>{{ product.created_at|date:"d.m.Y H:i" }}</p>
 
-    <p>Продавец: {{ product.seller }}</p
+    <p>Продавец: {{ product.seller }}</p>
 
-    <a href="{% url 'blog:edit_product' product.id %}">Редактировать объявление</a>
+    {% if request.user == product.seller %}
+        <a href="{% url 'blog:edit_product' product.id %}">Редактировать объявление</a>
 
-    <a href="{% url 'blog:remove_product' product.id %}">Удалить объявление</a>
+        <a href="{% url 'blog:remove_product' product.id %}">Удалить объявление</a>
+    {% endif %}
 {% endblock page_content %}
