feat(bootstrap-icons): Подключила Bootstrap  Icons

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load django_bootstrap5 %}
+{% load bootstrap_icons %}
 
 <!DOCTYPE html>
 <html>
@@ -34,7 +35,9 @@
                         <ul class="navbar-nav">
                             {% if request.user.is_authenticated %}
                                 <li class="nav-item">
-                                    <a class="nav-link " href="{% url "users:profile" request.user.username %}">{{ request.user }}</a>
+                                    <a class="nav-link" href="{% url "users:profile" request.user.username %}">
+                                        {% bs_icon 'person-circle' extra_classes='me-1' %}{{ request.user }}
+                                    </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" aria-current="page" href="{% url 'users:logout' %}">Выйти из аккаута</a>
