feat(scroll-to-top): Добавила кнопку для прокрутки вверх, добавила core.js для общих скриптов

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
         {% bootstrap_javascript %}
 
         <link rel="stylesheet" href="{% static 'css/core.css' %}">
+        <link rel="stylesheet" href="{% static 'css/scroll-to-top.css' %}">
+        <script src="{% static 'js/core.js' %}" type="module" defer></script>
     </head>
     <body>
         <header>
@@ -57,5 +59,8 @@
         </header>
         <main>{% block page_content %}{% endblock page_content %}</main>
         <footer>&copy; Все права защищены 2025</footer>
+        <button id="scrollToTopBtn" class="scroll-to-top disabled">
+        {% bs_icon 'arrow-up' size="25px" %}
+    </button>
     </body>
 </html>
