--- a/blog/templates/shop/product_detail.html
+++ b/blog/templates/shop/product_detail.html
@@ -7,6 +7,9 @@
     <h1>Детали товара:</h1>
     <h2>ID товара: {{ product.id }}</h2>
     <h3>{{ product.name }}</h3>
+    {% if product.image %}
+        <img src="{{ product.image.url }}" alt="Изображение товара">
+    {% endif %}
     <p>{{ product.description }}</p>
     <p>{{ product.price }}</p>
     <p>{{ product.created_at|date:"d.m.Y H:i" }}</p>
