--- a/blog/templates/shop/product_form.html
+++ b/blog/templates/shop/product_form.html
@@ -5,7 +5,7 @@
 {% block page_content %}
     <h1>{{ name }}</h1>
 
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data" novalidate>
         {% csrf_token %}
     
         {% for field in form %}
