Добавила поле slug для Product, изменила маршрут детального отображения, редактирования и удаления товара (теперь по slug)

--- a/blog/templates/shop/product_detail.html
+++ b/blog/templates/shop/product_detail.html
@@ -17,8 +17,8 @@
     <p>Продавец: <a href="{% url "users:profile" username=product.seller.username %}">{{ product.seller }}<a></p>
 
     {% if request.user == product.seller %}
-        <a href="{% url 'blog:edit_product' product.id %}">Редактировать объявление</a>
+        <a href="{% url 'blog:edit_product' product.slug %}">Редактировать объявление</a>
 
-        <a href="{% url 'blog:remove_product' product.id %}">Удалить объявление</a>
+        <a href="{% url 'blog:remove_product' product.slug %}">Удалить объявление</a>
     {% endif %}
 {% endblock page_content %}
