--- a/blog/templates/shop/confirm_product_delete.html
+++ b/blog/templates/shop/confirm_product_delete.html
@@ -12,5 +12,5 @@
         <button type="submit">Да, удалить</button>
     </form>
 
-    <a href="{% url 'blog:product_detail' product.id %}">Отмена</a>
+    <a href="{% url 'blog:product_detail' product.slug %}">Отмена</a>
 {% endblock page_content %}
