feat(products/category): Категория для объявлений, отображение категории в форме ProductForm, get_absolute_url для получения списка объявлений по категории

--- a/blog/templates/shop/product_detail.html
+++ b/blog/templates/shop/product_detail.html
@@ -10,6 +10,7 @@
     {% if request.user == product.seller %}
         Статус: {{ product.get_status_display }} 
     {% endif %}
+    <p>Категория: <a href="{{ product.category.get_absolute_url }}">{{ product.category.name }}</a></p>
     {% if product.image %}
         <img src="{{ product.image.url }}" alt="Изображение товара">
     {% endif %}
