--- a/blog/templates/shop/product_form.html
+++ b/blog/templates/shop/product_form.html
@@ -13,6 +13,7 @@
                 {{ field.label_tag }}
                 {{ field }}
                 {{ field.errors }}
+                {{ field.help_text }}
             </div>
         {% endfor %}
 
