--- a/blog/templates/shop/includes/product_container.html
+++ b/blog/templates/shop/includes/product_container.html
@@ -1,5 +1,6 @@
 <div class="post-container" style="border: 1px solid black; margin-bottom: 10px; padding: 15px;">
   <h2>Название товара: <a href="{% url 'blog:product_detail' product_slug=product.slug %}">{{ product.name }}</a></h2>
+  <p>Категория: <a href="{{ product.category.get_absolute_url }}">{{ product.category.name }}</a></p>
   <p>Описание товара: {{ product.description }}</p>
   <small>Дата создания объявления: {{ product.created_at|date:"d.m.Y H:i" }}</small>
 </div>
