--- a/templates/base.html
+++ b/templates/base.html
@@ -28,16 +28,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'blog:product_list' %}">Список объявлений</a>
+                            <a class="nav-link {% if request.resolver_match.url_name == 'product_list' %}active{% endif %}" aria-current="page" href="{% url 'blog:product_list' %}">Список объявлений</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'blog:new_product' %}">Создать объявление</a>
+                            <a class="nav-link {% if request.resolver_match.url_name == 'new_product' %}active{% endif %}" aria-current="page" href="{% url 'blog:new_product' %}">Создать объявление</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav">
                             {% if request.user.is_authenticated %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url "users:profile" request.user.username %}">
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'profile' and request.resolver_match.kwargs.username == request.user.username %}active{% endif %}" href="{% url "users:profile" request.user.username %}">
                                         {% bs_icon 'person-circle' extra_classes='me-1' %}{{ request.user }}
                                     </a>
                                 </li>
@@ -46,10 +46,10 @@
                                 </li>
                             {% else %}
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="{% url 'users:login' %}">Войти</a>
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'login' %}active{% endif %}" aria-current="page" href="{% url 'users:login' %}">Войти</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="{% url 'users:register' %}">Регистрация</a>
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'register' %}active{% endif %}" aria-current="page" href="{% url 'users:register' %}">Регистрация</a>
                                 </li>
                             {% endif %}
                         </ul>
