--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block page_title %}{% endblock page_title %}</title>
+        <link rel="icon" href="{% static 'images/favicon.ico' %}">
 
         {% bootstrap_css %}
         {% bootstrap_javascript %}
