--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,10 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="{% url 'users:logout' %}">Выйти из аккаута</a>
+                                    <form class='nav-link' method="POST" action="{% url 'users:logout' %}">
+                                        {% csrf_token %}
+                                        <button type="submit">Выйти из аккаута</button>
+                                    </form>
                                 </li>
                             {% else %}
                                 <li class="nav-item">
