--- a/blog/templates/shop/pages/product_detail.html
+++ b/blog/templates/shop/pages/product_detail.html
@@ -25,8 +25,8 @@
     {% endif %}
     <p>{{ product.description }}</p>
     <p>{{ product.price }}</p>
-    <p>Дата создания объявления: {{ product.created_at|date:"d.m.Y H:i" }}</p>
-    <p>Дата последнего изменения объявления: {{ product.updated_at|date:"d.m.Y H:i" }}</p>
+    <p>Дата создания объявления: <span class="date-field">{{ product.created_at|date:"c" }}</span></p>
+    <p>Дата последнего изменения объявления: <span class="date-field">{{ product.updated_at|date:"c" }}</span></p>
 
     <p>Продавец: <a href="{% url "users:profile" username=product.seller.username %}">{{ product.seller }}<a></p>
 
